# homeworkC

./: CMakeLists.txt  README.md  array.c  balanced.c  cycle.c  cycle.h  fibCount.c  instruction  isMax.c  isMax.h  list.c  list.h  listCount.c  listSort.c  main.c  palidrom.c  sort.h  sort.s  sortStation.c  stack.c  task3.c  testIsMax.c
BinaryAddition/: CMakeLists.txt  binaryAddition.c  binaryAddition.h  testBinaryAddition.c
microDoubl/: CMakeLists.txt  microDouble.c  microDouble.h  testMicroDouble.c
src/: balanced.c  list.c  listSort.c  sortStation.c  stack.c  stack.h  test.c
